--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=spring_shop_api
-spring.datasource.url=jdbc:mysql://localhost:3306/task_manager
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
+spring.datasource.url=jdbc:mysql://database:3306/your_database_name
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
