--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=spring_shop_api
 spring.datasource.url=jdbc:mysql://database:3306/your_database_name
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
