--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,19 +15,15 @@ services:
     networks:
       - backend
     environment:
-#      MYSQL_USER: springstudnet
-#      MYSQL_PASSWORD: springstudnet
+      MYSQL_USER: springstudnet
+      MYSQL_PASSWORD: springstudnet
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: your_database_name # should this be here??
+      MYSQL_DATABASE: your_database_name
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "springstudnet", "-pspringstudnet"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-proot"]
       interval: 5s
       timeout: 10s
       retries: 5
-#      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-#      interval: 30s
-#      timeout: 10s
-#      retries: 5
 
 networks:
   backend:
