--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,12 @@ services:
       interval: 5s
       timeout: 10s
       retries: 5
+    volumes:
+      - db-data:/var/lib/mysql
+
+volumes:
+  db-data:
 
 networks:
   backend:
+
