--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=spring_shop_api
-# spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB_NAME:your_database_name} <- this also works
-spring.datasource.url=jdbc:mysql://database:3306/your_database_name
-spring.datasource.username=springstudnet
-spring.datasource.password=springstudnet
-#spring.datasource.username=${MYSQL_USER:springstudnet} <- works
-#spring.datasource.password=${MYSQL_PASSWORD:springstudnet}
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://database:3306/my_database
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+
+management.endpoints.web.exposure.include=*
+spring.security.user.password=root
+spring.security.user.name=root
