--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,14 +11,15 @@ services:
       - backend
 
   database:
-    image: mysql:8.4.3
+    build: ./database
     networks:
       - backend
     environment:
-      MYSQL_USER: springstudnet
-      MYSQL_PASSWORD: springstudnet
+#      MYSQL_USER: springstudent
+#      MYSQL_PASSWORD: springstudent
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: your_database_name
+    command:
+      - --mysql-native-password=ON
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-proot"]
       interval: 5s
